fix: dark mode

--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -99,6 +99,6 @@ html {
     }
 
     .shopping-list-item.checked input {
-        @apply bg-white;
+        @apply bg-background;
     }
 }
